# Tinification

./: 1-withoutacc.dot  2-accoutput.dot  3-withacc.dot  RV-Example.statespace  automation_build.sh  castfile.aut  cleanup_build.sh  concat.py  fixed_time_progress.aut  mender.py  new.dot  new_castfile.aut  new_castfile_tinytwin.aut  observable_actions.txt  program_cfg_abstract_by_class.dot  statespace.xml  tau_actions.txt  temp.txt  temp1.txt  test2.statespace
.bsp/: scala-cli.json
.metals/: metals.mv.db
.scala-build/: ide-envs.json  ide-inputs.json
Automate/: 1.rebeca  3.rebeca  RV-Example.statespace  castfile.aut  cleanup_build.sh  cleanup_build_automatedrebeca.sh  fixed_time_progress.aut  generate_tests.sh  new.dot  new_castfile.aut  new_castfile_tinytwin.aut  new_castfile_tinytwin_original.aut  new_castfile_tinytwin_removed.aut  new_original.dot  new_removed.dot  observable_actions.txt  statespace.xml  tau_actions.txt  temp.txt  temp1.txt  time_accumulator.py
Joern/: input.dot  input_abc  input_hvac.dot  output_abc.dot  output_all.dot  output_havc.dot  output_reduced.dot  program_cfg_abstract_by_class.dot  reduceCFG.py  slice-code.py  sliceCfg.py
JoernQueries/: 4-delete-leaf-return-transition.scala
ParseXML/: 1.py  ipdates one  it.txt  maw.xml  maw_shift_merged.xml  merged states  (+2 more)
src-gen/castfunction_variables/: CMakeLists.txt
src-gen/castfunction_variables/castfunction_variables/: CMakeLists.txt  main.cc
src-gen/castfunction_variables/castfunction_variables/castfunction_variables/castfunction_variables/: _lf_preamble.cc  castfunction_variables.hh
(+119 files in other folders)
